Fix h1 line-heights being too big when resizing them on smaller viewports.

--- a/frontend/styles/typography.css
+++ b/frontend/styles/typography.css
@@ -118,7 +118,7 @@
 	font-family: 'MDPrimer', -apple-system, Helvetica, Arial, sans-serif;
 	font-weight: 600;
 	font-size: 5rem;
-	line-height: 5rem;
+	line-height: 1em;
 	letter-spacing:-0.04rem;
 	margin-top: 0em;
 	margin-bottom: 0.5em;
